@@ -1,11 +1,11 @@
 package com.daangn.dangunmarket.domain.post.facade.dto;
 
+import com.daangn.dangunmarket.domain.post.model.PostImage;
 import com.daangn.dangunmarket.domain.post.model.TradeStatus;
 import com.daangn.dangunmarket.domain.post.service.dto.PostFindResponse;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record PostFindResponseParam(
         Long postId,
@@ -28,8 +28,8 @@ public record PostFindResponseParam(
 
     public static PostFindResponseParam of(PostFindResponse response, String memberName, String areaName) {
         List<String> urls = response.postImageList().stream()
-                .map(e -> e.getUrl())
-                .collect(Collectors.toList());
+                .map(PostImage::getUrl)
+                .toList();
 
         return new PostFindResponseParam(
                 response.postId(),
